--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,14 @@ install:
     - TERM=dumb ./gradlew -q assemble
 
 script:
-    - TERM=dumb ./gradlew clean build
+    - TERM=dumb ./gradlew build jacocoTestReport jacocoRootReport
 
 jdk:
-    - oraclejdk7
+    - oraclejdk8
+
+before_install:
+    - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
+
+after_success:
+    ./gradlew coveralls
