--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,15 @@ buildscript {
     }
 
     dependencies {
-        classpath 'org.codehaus.griffon:gradle-griffon-plugin:2.2.0-SNAPSHOT'
-        classpath 'org.codehaus.griffon:gradle-griffon-build-plugin:2.2.0-SNAPSHOT'
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.1.0'
+        classpath 'org.codehaus.griffon:gradle-griffon-plugin:2.2.0'
+        classpath 'org.codehaus.griffon:gradle-griffon-build-plugin:2.2.0'
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.3.1'
         classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
-        classpath 'org.ajoberstar:gradle-git:0.12.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.1'
+        classpath 'org.ajoberstar:gradle-git:1.0.0'
         classpath 'org.kordamp.gradle:stats-gradle-plugin:0.1.3'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.7'
-        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.8'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.1'
     }
 }
 
@@ -32,7 +32,6 @@ Date buildTimeAndDate = new Date()
 ext {
     buildDate = new SimpleDateFormat('yyyy-MM-dd').format(buildTimeAndDate)
     buildTime = new SimpleDateFormat('HH:mm:ss.SSSZ').format(buildTimeAndDate)
-    jacocoProjects = []
 }
 
 allprojects {
@@ -42,6 +41,7 @@ allprojects {
 
     repositories {
         jcenter()
+        mavenLocal()
     }
 
     if (JavaVersion.current().isJava8Compatible()) {
@@ -57,11 +57,23 @@ jacoco {
     toolVersion = jacocoVersion
 }
 
+ext.jacocoProjects = []
+
 subprojects { subproj ->
     plugins.withType(JavaPlugin) {
         configurations {
             compileOnly
             testCompileOnly
+        }
+
+        subproj.tasks.withType(JavaCompile) {
+            sourceCompatibility = subproj.sourceCompatibility
+            targetCompatibility = subproj.targetCompatibility
+        }
+
+        subproj.tasks.withType(GroovyCompile) {
+            sourceCompatibility = subproj.sourceCompatibility
+            targetCompatibility = subproj.targetCompatibility
         }
 
         sourceSets {
@@ -87,7 +99,7 @@ subprojects { subproj ->
         dependencies {
             testCompile 'junit:junit:4.12'
             testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
-            testCompile 'org.slf4j:slf4j-simple:1.7.7'
+            testCompile 'org.slf4j:slf4j-simple:1.7.10'
         }
 
         task sourceJar(type: Jar) {
@@ -111,6 +123,8 @@ subprojects { subproj ->
         if (subproj.publishJars.toBoolean()) {
             subproj.apply from: rootProject.file('gradle/docs.gradle')
         }
+
+        subproj.test.testLogging { exceptionFormat 'full' }
     }
 }
 
@@ -141,7 +155,7 @@ task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
     dependsOn = jacocoProjects.test
     additionalSourceDirs = files(jacocoProjects.sourceSets.main.allSource.srcDirs)
     sourceDirectories = files(jacocoProjects.sourceSets.main.allSource.srcDirs)
-    classDirectories = files(jacocoProjects.sourceSets.main.output)
+    classDirectories =  files(jacocoProjects.sourceSets.main.output)
     executionData = files(jacocoProjects.jacocoTestReport.executionData)
     reports {
         html.enabled = true
