--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group=org.codehaus.griffon.plugins
-version=0.1.0-SNAPSHOT
+version=1.0.0
 pluginBaseName=griffon-lookandfeel
-griffonVersion=2.2.0-SNAPSHOT
+griffonVersion=2.2.0
 griffonPlugin=true
 publishJars=false
 sourceCompatibility=1.7
@@ -13,5 +13,5 @@ projectIssueTrackerUrl=http://artifacts.griffon-framework.org/plugin/lookandfeel
 projectVcsUrl=https://github.com/griffon/griffon-lookandfeel-plugin
 javadocFooter=Copyright &copy; 2014-2015 aalmiray. All rights reserved.
 projectLabels=griffon,plugin,lookandfeel
-jacocoVersion=0.7.2.201409121644
+jacocoVersion=0.7.3.201502191951
 
