Update project coordinates

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ sourceCompatibility=1.7
 targetCompatibility=1.7
 projectDescription=Griffon Lookandfeel Plugin
 projectInceptionYear=2015
-projectWebsiteUrl=http://artifacts.griffon-framework.org/plugin/lookandfeel
-projectIssueTrackerUrl=http://artifacts.griffon-framework.org/plugin/lookandfeel/issues
-projectVcsUrl=https://github.com/griffon/griffon-lookandfeel-plugin
+projectWebsiteUrl=http://griffon-plugins.github.io/griffon-lookandfeel-plugin
+projectIssueTrackerUrl=https://github.com/griffon-plugins/griffon-lookandfeel-plugin/issues
+projectVcsUrl=https://github.com/griffon-plugins/griffon-lookandfeel-plugin
 javadocFooter=Copyright &copy; 2014-2015 aalmiray. All rights reserved.
 projectLabels=griffon,plugin,lookandfeel
 jacocoVersion=0.7.3.201502191951
