Fix project setup

--- a/subprojects/griffon-lookandfeel-core-selector/griffon-lookandfeel-core-selector.gradle
+++ b/subprojects/griffon-lookandfeel-core-selector/griffon-lookandfeel-core-selector.gradle
@@ -5,6 +5,7 @@ griffon {
     disableDependencyResolution = false
     includeGroovyDependencies = false
     version = rootProject.griffonVersion
+    applicationProject = false
     toolkit = 'swing'
 }
 
