--- a/subprojects/griffon-lookandfeel-synthetica/griffon-lookandfeel-synthetica.gradle
+++ b/subprojects/griffon-lookandfeel-synthetica/griffon-lookandfeel-synthetica.gradle
@@ -3,6 +3,13 @@ apply plugin: 'org.codehaus.griffon.griffon'
 
 apply from: rootProject.file('gradle/code-coverage.gradle')
 
+griffon {
+    disableDependencyResolution = false
+    includeGroovyDependencies = false
+    version = rootProject.griffonVersion
+    applicationProject = false
+}
+
 repositories {
     flatDir { dir 'lib' }
 }
