--- a/subprojects/griffon-lookandfeel-core/griffon-lookandfeel-core.gradle
+++ b/subprojects/griffon-lookandfeel-core/griffon-lookandfeel-core.gradle
@@ -5,6 +5,7 @@ griffon {
     disableDependencyResolution = false
     includeGroovyDependencies = false
     version = rootProject.griffonVersion
+    applicationProject = false
 }
 
 // apply from: rootProject.file('gradle/code-coverage.gradle')
