--- a/subprojects/griffon-lookandfeel-skin/griffon-lookandfeel-skin.gradle
+++ b/subprojects/griffon-lookandfeel-skin/griffon-lookandfeel-skin.gradle
@@ -4,6 +4,13 @@ apply plugin: 'com.github.johnrengelman.shadow'
 
 apply from: rootProject.file('gradle/code-coverage.gradle')
 
+griffon {
+    disableDependencyResolution = false
+    includeGroovyDependencies = false
+    version = rootProject.griffonVersion
+    applicationProject = false
+}
+
 repositories {
     flatDir { dir 'lib' }
 }
